--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "TripHello",
-    "slug": "TripHello",
+    "name": "my-app-trip",
+    "slug": "my-app-trip",
     "version": "1.0.0",
     "orientation": "portrait",
     "userInterfaceStyle": "light",
